# BoxTools

./: .gitignore  README.md  pyproject.toml
src/boxtools/: Color.py  Doc.py  Help.py  Logs.py  ObjectConverters.py  Prerequisites.py  SqlParser.py  boxHelper.py  common.py  dateUtils.py  environment.py  fileAccess.py  fileContentSwapper.py  gitPythonTools.py  input.py  javaTools.py  multiprocessingTools.py  osx.py  profiling.py  stringUtils.py
src/boxtools/data/: Color.py  input.py
src/boxtools/data/access/: MyTinyDB.py  TinyDbHelper.py  fileAccess.py
src/boxtools/data/dto/: ConfigurationChangeDto.py  FieldDto.py  HelpEntry.py  PropertyDto.py
src/boxtools/data/fetcher/: DataFetcher.py
src/boxtools/data/parser/: SqlParser.py  XmlParser.py  iniParser.py
src/boxtools/data/swapper/: fileContentSwapper.py  javaTools.py
src/boxtools/data/sync/: GitPythonCoreTools.py
src/boxtools/data/util/: ObjectConverters.py  Settings.py  clipboardUtils.py  dateUtils.py  fileUtils.py  mathUtils.py  test_MathUtils.py
src/boxtools/doc/: Doc.py  Help.py
src/boxtools/dto/: ConfigurationChangeDto.py  Exceptions.py  FieldDto.py  HelpEntry.py  PropertyDto.py  Settings.py
src/boxtools/env/: OsxApp.py  Prerequisites.py  environment.py  multiprocessingTools.py
src/boxtools/exception/: Error.py  Exceptions.py
src/boxtools/extendables/: Logable.py  Printable.py
src/boxtools/parser/: iniParser.py
src/boxtools/ui/: IniEditor.py  TkUITools.py  UiTools.py  VerticalScrollableFrame.py
