[project]
name = "boxtools"
version = "0.1.0"
description = ""
authors = [
    {name = "obow",email = "olivier.bourlon.pro@gmail.com"}
]
readme = "README.md"
# TinyDB requires <4.0
requires-python = ">=3.13, <4.0"
dependencies = [
    "gitdb (==4.0.12)",
    "gitpython (==3.1.45)",
    "line-profiler (==5.0.0)",
    "numpy (==2.3.5)",
    "pandas (==2.3.3)",
    "pyperclip (==1.11.0)",
    "python-dateutil (==2.9.0.post0)",
    "pytz (==2025.2)",
    "six (==1.17.0)",
    "smmap (==5.0.2)",
    "sqlparse (==0.5.4)",
    "tzdata (==2025.2)",
    "pexpect (>=4.9.0,<5.0.0)",
    "tinydb (>=4.8.2,<5.0.0)"
]

[tool.poetry]
packages = [{include = "boxtools", from = "src"}]
#packages = [{include = "lib", from = "pythonBox"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"